2011-04-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac: Enable silent-rules of automake.

2011-03-20  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* debian/watch: Fix debian/watch.
	* man/betaradio.1: Polish manpage.

2011-03-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* debian/control: Remove unneeded dependency.
	* man/betaradio.1: Polish man page.

2011-03-12  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* debian/README,
	debian/changelog,
	debian/compat,
	debian/control,
	debian/copyright,
	debian/rules,
	debian/watch: Polish for Debian package.
	* debian/rules: Fix a syntax error.
	* debian/control,
	debian/copyright: Fix some lintian warning and error.
	* data/betaradio.desktop.in: Remove deprecated tag.

2011-02-18  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/academic.json: Remove "PTT Radio - OnlyMayDay".

2011-01-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/betaradio.vala: Set default icon.
	* po/zh_TW.po,
	src/betaradio.vala: Set tooltip text.
	* data/betaradio.desktop.in,
	man/betaradio.1: Adjust comment and description.
	* debian/README,
	debian/changelog,
	debian/control,
	debian/rules,
	debian/source/format,
	mkdeb.sh: Polish for Debian package.
	* debian/control,
	debian/source/format: Fix lintian warning and error.
	* mkdeb.sh: Polish script.
	* po/zh_TW.po: Update po.

2011-01-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/betaradio.c,
	src/gstplay.c,
	src/gstplay.h,
	src/json_cat.c,
	src/json_cat.h: Remove deprecated source codes.
	* Makefile.am,
	autogen.sh,
	configure.ac,
	po/POTFILES.in,
	po/zh_TW.po,
	src/Makefile.am,
	src/betaradio.vala,
	vapi/Makefile.am,
	vapi/config.vapi: Deploy Vala program and gettextize.
	* src/betaradio.c: Remove unneeded source codes.
	* src/betaradio.vala,
	src/json_soup.vala: Follow function naming rule of Vala.

2010-12-29  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
